--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "node-sass": "^9.0.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
