--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
   "scripts": {
     "start": "node index",
     "dev": "node-dev index --clear --notify=false"
+  
   },
   "keywords": [],
   "author": "Julien PIERRAT-LABOLLE",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "node-sass": "^9.0.0",
-    "slugify": "^1.6.6"
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1",
+    "slugify": "^1.6.6",
+    "sqlite3": "^5.1.6",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "node-dev": "^8.0.0"
